secciones de importacion y exportacion

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -132,3 +132,68 @@
 }
 
 /* SECCION Maritimo */
+
+/* SECCION Importador */
+.hero-importador {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 80vh;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+}
+
+
+.hero-importador::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
+}
+
+.importador-content {
+  position: relative;
+  z-index: 2;
+}
+
+/* SECCION Importador */
+
+/* SECCION Exportacion */
+
+.hero-exportacion {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 80vh;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+}
+
+
+.hero-exportacion::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
+}
+
+
+.exportacion-content {
+  position: relative;
+  z-index: 2;
+}
+
+
+/* SECCION Exportacion */
